# ConnectomeBench

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  NEURD_CODE_AUDIT.md  README.md  pixi.toml  pyproject.toml  requirements.txt  run_tests.sh
analysis/: analyze_human_annotations.py  analyze_merge_comparison_results.py  analyze_merge_identification.py  analyze_merge_identification_results.py  analyze_merge_performance.py  analyze_segment_classification_results.py  analyze_split_comparison_results.py  analyze_split_identification_results.py  compare_merge_results.py  merge_identification_configs.txt  run_analysis.sh  split_merge_resolution.ipynb
annotation/: SEPARATEOUT_ANALYSIS_segment_classfication.ipynb  annotate_nuclei.py  load_and_plot_segments.py  mouse_nucleus_annotations.json  nucleus_annotation_web.py  split_error_annotation.ipynb
baselines/: resnet.py  resnet_split_merge.py
docs/: NEURD_COMPARISON_PLAN.md  NEURD_MESHLAB_REWRITE.md  NEURD_RUNBOOK.md
envs/neurd/: pyproject.toml
examples/: connectome_visualization_example.ipynb  merge_error_identification.py  segment_classification.py  split_error_correction.py  test_data_loading.ipynb
scripts/: CAVEsetup.ipynb  README_CLAUDE_FINETUNING.md  annotate_nuclei.py  caveclient_token.py  connectome_visualizer.py  croissant.json  get_data.py  load_and_plot_segments.py  merge_claude_responses.py  merge_resolution.py  modal_qwen_finetune.py  modal_qwen_finetune_dpo.py  modal_qwen_finetune_rl.py  modal_qwen_segment_classification.py  neurd_pymeshlab_prototype.py  nucleus_annotation_tool.py  nucleus_annotation_web.py  prompts.py  qwen_hf_run_script.py  resnet.py  resnet_split_merge.py  run_from_hf_datasets.py  segment_classfication.ipynb  segmentation_classification.py  (+5 more)
(+15 files in other folders)
