[project]
name = "connectomebench"
version = "0.1.0"
description = "A benchmark to evaluate the proofreading capabilities of multimodal large language models (LLMs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "caveclient>=7.7.4",
    "cloud-volume>=12.2.0",
    "google-genai>=1.16.1",
    "litellm>=1.67.5",
    "navis>=1.10.0",
    "octarine-navis-plugin==0.1.2",
    "octarine3d==0.2.5",
    "openai>=1.80.0",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "pygfx==0.7.0",
]
